<resources>
    <string name="app_name">Pizza Almanac</string>
    <string name="name">Name</string>
    <string name="origin">Origin</string>
    <string name="any_origin">Any origin</string>
    <string name="ingredients">Ingredients</string>
    <string name="description">Description</string>
    <string name="all_pizzas">All Pizzas</string>
    <string name="sort_by">Sort By</string>
    <string name="sort_by_rating">Sort by Rating</string>
    <string name="sort_by_name">Sort by Name</string>
    <string name="sorted_by_rating">Sorted by rating</string>
    <string name="sorted_by_name">Sorted by name</string>
    <string name="filter">Filter</string>
    <string name="search">Search</string>
    <string name="apply">Apply</string>
    <string name="cancel">Cancel</string>
    <string name="message_no_results">Oops, couldn\'t find any results\nthat matched your query</string>
    <string name="submit">Submit</string>
    <string name="add_random_items">Add Random Items</string>
    <string name="sign_out">Sign Out</string>
    <string name="add_new_pizza">Add new pizza</string>
    <string name="upload_picture">Upload picture</string>
    <string name="settings">Settings</string>
    <string name="font_size">Font size</string>
    <string name="small_text">Small text</string>
    <string name="small_text_value" translatable="false">14sp</string>
    <string name="medium_text">Medium text</string>
    <string name="medium_text_value" translatable="false">16sp</string>
    <string name="large_text">Large text</string>
    <string name="large_text_value" translatable="false">18sp</string>
    <string name="regular" translatable="false">Roboto Regular</string>
    <string name="thin" translatable="false">Roboto Thin</string>
    <string name="light" translatable="false">Roboto Light</string>
    <string name="medium" translatable="false">Roboto Medium</string>
    <string name="condensed" translatable="false">Roboto Condensed</string>

    <string name="sign_in_error">Sign In Error</string>
    <string name="no_network_connection">No network connection</string>
    <string name="unknown_error">Unknown error</string>
    <string name="retry">Retry</string>
    <string name="exit">Exit</string>

    <!-- Most popular pizza origin countries -->
    <string-array name="origins">
        <item>@string/any_origin</item>
        <item>Argentina</item>
        <item>Australia</item>
        <item>Brazil</item>
        <item>Canada</item>
        <item>China</item>
        <item>Colombia</item>
        <item>France</item>
        <item>Iceland</item>
        <item>India</item>
        <item>Indonesia</item>
        <item>Iran</item>
        <item>Israel</item>
        <item>Italy</item>
        <item>Japan</item>
        <item>Korea</item>
        <item>Malaysia</item>
        <item>Malta</item>
        <item>Mexico</item>
        <item>Nepal</item>
        <item>New Zealand</item>
        <item>Norway</item>
        <item>Pakistan</item>
        <item>Russia</item>
        <item>Sweden</item>
        <item>Thailand</item>
        <item>Turkey</item>
        <item>United Kingdom</item>
        <item>United States</item>
    </string-array>

    <!--  Values for generating random pizzas  -->
    <string-array name="ingredients_random">
        <item>Mozzarella</item>
        <item>Tomatoes</item>
        <item>Pepperoni</item>
        <item>Ham</item>
        <item>Blue Cheese</item>
        <item>Tomato Sauce</item>
        <item>Garlic Sauce</item>
        <item>Pineapples</item>
        <item>Parmesan</item>
        <item>Shrimps</item>
        <item>Bazil</item>
        <item>Herbs</item>
    </string-array>

    <string-array name="name_first_words_random">
        <item>Central</item>
        <item>Tasty</item>
        <item>Spicy</item>
        <item>Fantasy</item>
        <item>Crisp</item>
        <item>Herbed</item>
        <item>Presto</item>
        <item>Hot</item>
        <item>The Best</item>
    </string-array>

    <string-array name="name_second_words_random">
        <item>Pizza</item>
        <item>Pie</item>
        <item>Pitza</item>
        <item>Crust</item>
        <item>Dish</item>
        <item>Food</item>
        <item>Diner</item>
    </string-array>

    <string-array name="photo_urls_random">
        <item><![CDATA[https://firebasestorage.googleapis.com/v0/b/pizza–almanac.appspot.com/o/pizza_0.jpg?alt=media&token=ec65d64f-b634-4b71-948c-14f03e62a5d3]]></item>
        <item><![CDATA[https://firebasestorage.googleapis.com/v0/b/pizza–almanac.appspot.com/o/pizza_1.jpg?alt=media&token=ff90d60b-712b-4654-ad21-16f3b3e22287]]></item>
        <item><![CDATA[https://firebasestorage.googleapis.com/v0/b/pizza–almanac.appspot.com/o/pizza_2.jpg?alt=media&token=d12e9978-3360-4c50-ba50-5a8b50575ed7]]></item>
        <item><![CDATA[https://firebasestorage.googleapis.com/v0/b/pizza–almanac.appspot.com/o/pizza_3.jpg?alt=media&token=ee734af7-4563-4a82-b814-43fc8d5e861e]]></item>
        <item><![CDATA[https://firebasestorage.googleapis.com/v0/b/pizza–almanac.appspot.com/o/pizza_4.jpg?alt=media&token=928eed5e-1f99-4712-8127-f4b0798a01d6]]></item>
        <item><![CDATA[https://firebasestorage.googleapis.com/v0/b/pizza–almanac.appspot.com/o/pizza_5.jpg?alt=media&token=8fbcdca1-2be0-4e3e-9f0d-581e71cca3be]]></item>
        <item><![CDATA[https://firebasestorage.googleapis.com/v0/b/pizza–almanac.appspot.com/o/pizza_6.jpg?alt=media&token=93f65b32-f4d3-496a-a673-805d9bee8bd3]]></item>
        <item><![CDATA[https://firebasestorage.googleapis.com/v0/b/pizza–almanac.appspot.com/o/pizza_7.jpg?alt=media&token=d78f4f8a-404f-4806-b520-35b12f4a303b]]></item>
        <item><![CDATA[https://firebasestorage.googleapis.com/v0/b/pizza–almanac.appspot.com/o/pizza_8.jpg?alt=media&token=1cbe32e1-1427-42eb-b9ba-51f880ec6b9f]]></item>
        <item><![CDATA[https://firebasestorage.googleapis.com/v0/b/pizza–almanac.appspot.com/o/pizza_9.jpg?alt=media&token=74e3a8f1-eef0-4071-ac19-e3813ea2be87]]></item>
    </string-array>

    <string name="description_random">
        Pizza is a savory dish of Italian origin, consisting of a usually round, flattened base of
        leavened wheat-based dough topped with tomatoes, cheese, and often various other ingredients
        (anchovies, meat, etc.) baked at a high temperature, traditionally in a wood-fired oven.
        A small pizza is sometimes called a pizzetta.
    </string>

    <string-array name="sort_by_array">
        <item>@string/sort_by_rating</item>
        <item>@string/sort_by_name</item>
    </string-array>

    <string-array name="font_size_array">
        <item>@string/small_text</item>
        <item>@string/medium_text</item>
        <item>@string/large_text</item>
    </string-array>

    <string-array name="font_family_array">
        <item>@string/regular</item>
        <item>@string/thin</item>
        <item>@string/light</item>
        <item>@string/medium</item>
        <item>@string/condensed</item>
    </string-array>

</resources>
