<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/newPizzaDialog"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        style="@style/AppTheme.Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/add_new_pizza" />

    <EditText
        android:id="@+id/pizzaNameEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:hint="@string/name"
        android:importantForAutofill="no"
        android:inputType="text" />

    <Spinner
        android:id="@+id/pizzaOriginSpinner"
        style="@style/AppTheme.FilterSpinner"
        android:layout_marginBottom="16dp"
        android:entries="@array/origins" />

    <EditText
        android:id="@+id/pizzaIngredientsEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:hint="@string/ingredients"
        android:importantForAutofill="no"
        android:inputType="text" />

    <me.zhanghai.android.materialratingbar.MaterialRatingBar
        android:id="@+id/pizzaRatingBar"
        style="@style/Widget.MaterialRatingBar.RatingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="16dp"
        android:maxHeight="24dp"
        android:minHeight="24dp"/>

    <EditText
        android:id="@+id/pizzaDescriptionEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="16dp"
        android:hint="@string/description"
        android:importantForAutofill="no"
        android:inputType="text" />

    <LinearLayout
        android:id="@+id/layoutStorage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/buttonCamera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="16dp"
            android:text="@string/upload_picture" />

        <TextView
            android:id="@+id/pictureUrl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:autoLink="web" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/newPizzaCancel"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="16dp"
            android:text="@string/cancel"
            android:textColor="@color/greySecondary"
            android:theme="@style/ThemeOverlay.FilterButton" />


        <Button
            android:id="@+id/newPizzaSubmit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/submit"
            android:theme="@style/ThemeOverlay.FilterButton" />

    </LinearLayout>

</LinearLayout>
