<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/mainScreen"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:theme="@style/AppTheme"
        app:popupTheme="@style/Theme.AppCompat.Light.DarkActionBar"
        app:title="@string/app_name"
        app:titleMarginStart="24dp"
        app:titleTextColor="@android:color/white" />

    <FrameLayout
        android:id="@+id/filterBarContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar"
        android:background="@color/colorPrimary"
        android:paddingBottom="12dp"
        android:paddingLeft="12dp"
        android:paddingRight="12dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/filterBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:elevation="12dp"
            android:foreground="?attr/selectableItemBackground"
            android:focusable="true">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical">

                <ImageView
                    android:id="@+id/buttonFilter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:padding="8dp"
                    android:tint="@color/greySecondary"
                    app:srcCompat="@drawable/ic_filter_list_white_24px" />

                <LinearLayout
                    android:id="@+id/textCurrentSearchContainer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="8dp"
                    android:layout_toEndOf="@+id/buttonFilter"
                    android:orientation="vertical"
                    android:paddingBottom="8dp"
                    android:paddingTop="8dp">

                    <TextView
                        android:id="@+id/textCurrentSearch"
                        style="@style/AppTheme.Body"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/all_pizzas"
                        android:textColor="@color/greySecondary" />

                    <TextView
                        android:id="@+id/textCurrentSortBy"
                        style="@style/AppTheme.Caption"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sorted_by_rating"
                        android:textColor="@color/greyDisabled" />

                </LinearLayout>

                <ImageView
                    android:id="@+id/buttonClearFilter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:padding="8dp"
                    android:tint="@color/greySecondary"
                    app:srcCompat="@drawable/ic_close_white_24px" />

            </RelativeLayout>

        </androidx.cardview.widget.CardView>

    </FrameLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerPizzas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/filterBarContainer"
        tools:listitem="@layout/item_pizza" />

    <LinearLayout
        android:id="@+id/viewEmpty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_below="@+id/filterBarContainer"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone"
        tools:visibility="gone">

        <TextView
            android:id="@+id/noResultsMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/message_no_results"
            android:textColor="@color/greyDisabled" />

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabShowNewPizzaDialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="28dp"
        app:srcCompat="@drawable/ic_add_white_24px" />

    <ProgressBar
        android:id="@+id/progressLoading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/recyclerPizzas"
        android:layout_alignTop="@+id/recyclerPizzas"
        android:layout_centerHorizontal="true"
        android:visibility="gone" />

</RelativeLayout>
